Fixed a bug where at high number boxes were overflowing

--- a/styles.css
+++ b/styles.css
@@ -13,17 +13,16 @@ h1 {
 }
 .header{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    margin-bottom: 40px;
-    
+    padding: 10px;
+
 }
 .block-container{
     display: flex;
     flex-wrap: wrap;
     width: 1000px;
-    height: 600px; 
+    height: 550px; 
     margin-left: auto;
     margin-right: auto;
 }
@@ -31,7 +30,7 @@ h1 {
 .block {
     border: 1px solid black;
     background-color: aquamarine;
-    margin: -1px;
+    margin: -0.8px;
     /* height: 50%; */
 }
 
